kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verdant-ingress
spec:
  ingressClassName: external-nginx
  rules:
  - http:
      paths:
      # - backend:
      #     service:
      #       name: hello-world-service
      #       port:
      #         number: 80
      #   path: /
      #   pathType: Prefix

      - backend:
          service:
            name: backend-service
            port:
              number: 80
        path: /
        pathType: Prefix
